<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/guide_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/guide_img"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/spyro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:text="@string/guide_summary_title"
        android:textColor="@color/yellow"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="28dp"
        android:text="@string/guide_summary_desc"
        android:textColor="@color/yellow"
        android:textSize="13sp" />

    <Button
        android:id="@+id/guide_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/yellow"
        android:text="@string/guide_final" />

</LinearLayout>
