<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/guide_btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/guide_skip"
        android:textColor="@color/purple" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/guide_btn_next"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="@string/guide_next"
        android:textColor="@color/yellow" />

    <LinearLayout
        android:id="@+id/guide_container"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#CC9c35ba"
            app:cardCornerRadius="999dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="18dp"
                android:paddingBottom="18dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/guide_char_title"
                    android:textColor="@color/yellow"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:text="@string/guide_char_desc"
                    android:textColor="@color/yellow"
                    android:textSize="13sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:layout_width="28dp"
        android:layout_height="16dp"
        android:layout_gravity="start"
        android:layout_marginStart="65dp"
        android:rotation="50"
        android:src="@drawable/guide_arrow_down" />

    <View
        android:id="@+id/guide_indicator"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="left"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle_indicator" />

</LinearLayout>
